kubernetes/Deployment-V2.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: rios
    version: v2
  name: rios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rios
      version: v2
  template:
    metadata:
      labels:
        app: rios
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - env:
            - name: JAVA_OPTIONS
              value: -Xms15m -Xmx15m -Xmn15m
            - name: REDIS_HOST
              value: redis-master
            - name: REDIS_PORT
              value: "6379"
            - name: GIN_MODE
              value: release
            - name: HTTP_PORT
              value: "8080"
            - name: API_VERSION
              value: "v2"
          name: rios
          image: sixbell/rios:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 8778
              name: jolokia
              protocol: TCP
            - containerPort: 9779
              name: prometheus
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - curl
                - localhost:8080/health
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            exec:
              command:
                - curl
                - localhost:8080/health
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          securityContext:
            privileged: false
