kubernetes/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
    visualize: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      version: "4.0.2"
      role: master
      tier: backend
  template:
    metadata:
      labels:
        app: redis
        version: "4.0.2"
        role: master
        tier: backend
        visualize: "true"
    spec:
      containers:
        - name: redis
          image: redis:4.0.2
          livenessProbe:
            tcpSocket:
              port: 6379
          ports:
            - name: redis-server
              containerPort: 6379
