kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: rios
  labels:
    app: rios
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: rios
