kubernetes/redis-service.yml
kind: Service
apiVersion: v1
metadata:
  name: redis
  labels:
    app: redis
    visualize: "true"
spec:
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app: redis
    role: master
    tier: backend
