kubernetes/Gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rios  -gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rios-gateway
spec:
  hosts:
  - "*"
  gateways:
  - RiOS-gateway
  http:
  - match:
    - uri:
        prefix: /rios
    rewrite:
      uri: /
    route:
    - destination:
        host: rios
        port:
          number: 8080
