kubernetes/virtual-service-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rios
spec:
  hosts:
  - rios
  http:
  - route:
    - destination:
        host: rios
    timeout: 1.000s
