kubernetes/virtual-service-v1-mirror-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rios
spec:
  hosts:
  - rios
  http:
  - route:
    - destination:
        host: rios
        subset: version-v1
    mirror:
      host: rios
      subset: version-v2
---
